Compiler/tests/bad/for1.nx
foreach i in 5
{   
    print(i);
}